# cgs-rag

./: .gitignore  CHANGELOG.md  LICENSE  Readme.md  pyproject.toml
.github/workflows/: publish.yml
cgs_rag/: __init__.py  calibration.py  claims.py  detector.py  result.py
cgs_rag/signals/: __init__.py  base.py  signal1_token.py  signal2_nli.py  signal3_cosine.py
examples/: basic_usage.py  calibrate_domain.py
tests/: test_claims.py
