[build-system]
requires      = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "cgs-rag"
version     = "0.1.0"
description = "Composite Grounding Score: multi-signal hallucination detection for production RAG systems"
requires-python = ">=3.9"
license     = {text = "MIT"}
authors     = [{name = "Nishant Kumar", email = "nishant.k@marmeto.com"}]

keywords = [
  "rag", "retrieval-augmented-generation",
  "hallucination", "detection",
  "nlp", "llm", "grounding", "faithfulness",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "torch>=2.0.0",
  "transformers>=4.36.0",
  "sentence-transformers>=2.2.0",
  "scikit-learn>=1.3.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov",
  "jupyter",
  "matplotlib",
  "seaborn",
]

[project.urls]
Homepage   = "https://github.com/nishant-k-marmeto/cgs-rag"
Repository = "https://github.com/nishant-k-marmeto/cgs-rag"

[tool.setuptools.packages.find]
where   = ["."]
include = ["cgs_rag*"]
